# api

./: .coveragerc  .dockerignore  .gitignore  .mypy.ini  .pre-commit-config.yaml  Dockerfile-dev  Dockerfile-prod  README.md  Taskfile.yml  app.py  black.toml  database.py  main.py  prek.toml  pyproject.toml  pyrightconfig.json  pytest-runner.sh  pytest.ini  requirements.in  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: build-and-deploy.yml
adapter/: miapeer_repository.py  sql_azure_repository.py
app/: database.py  dependencies.py  models.py
app/api/: queries.py
app/routers/: miapeer.py  miapeer_api.py
auth/: __init__.py  auth.py  auth0.py
miapeer/: app.py  dependencies.py  routes.py
miapeer/adapter/: database.py
miapeer/adapter/sql/: __init__.py  budget.py  transaction.py
miapeer/api/: __init__.py  models.py  queries.py  schema.graphql
miapeer/auth/: __init__.py  abstract.py  auth0.py  fastapi.py  jwt.py
miapeer/domain/: application.py
miapeer/models/: application.py  application_role.py  miapeer.py  permission.py  role.py  user.py
miapeer/models/miapeer/: application.py  application_role.py  permission.py  role.py  user.py
miapeer/models/quantum/: __init__.py  account.py  budget.py  category.py  import_definition.py  payee.py  portfolio.py  portfolio_user.py  portfolio_user_setting.py  repeat_option.py  repeat_unit.py  scheduled_transaction.py  scheduled_transaction_history.py  setting.py  (+3 more)
miapeer/routers/: miapeer.py  miapeer_api.py
miapeer/tests/: conftest.py  test_auth.py  test_dependencies.py  test_main.py
(+75 files in other folders)
