[project]
name = "miapeer-api"
version = "0.1.0"
requires-python = "==3.14.*"
dependencies = [
    "fastapi[all]>=0.135.1",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt[crypto]>=2.12.1",
    "pyodbc>=5.3.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-lazy-fixtures>=1.4.0",
    "pytest-watch>=4.2.0",
    "python-dateutil>=2.9.0.post0",
    "sqlmodel>=0.0.37",
]

[tool.ruff.lint]
extend-select = ["T100"]
